--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 
+/* import animation.css */
+@import "./css/animation.css";
 * {
   margin: 0;
   padding: 0;
@@ -16,12 +18,11 @@ body {
   font-size: 1.6rem;
   /* max-width: 1500px; */
   margin: 0 auto;
-  background: #f7f7ff;
+  /* background: #f7f7ff; */
 }
 
 p,
 a,
-h2,
 h3,
 h4,
 h5,
@@ -29,7 +30,8 @@ h6 {
   font-family: "Blinker", sans-serif;
 }
 
-h1 {
+h1,
+h2 {
   font-family: "Bebas Neue", cursive;
   font-size: 3.5rem;
 }
@@ -38,4 +40,66 @@ h1 {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+/* Dark mode switch */
+.switch {
+  --button-width: 3.5em;
+  --button-height: 2em;
+  --toggle-diameter: 1.5em;
+  --button-toggle-offset: calc((var(--button-height) - var(--toggle-diameter)) / 2);
+  --toggle-shadow-offset: 10px;
+  --toggle-wider: 3em;
+  --color-grey: #cccccc;
+  --color-green: #053651;
+}
+
+.slider {
+  display: inline-block;
+  width: var(--button-width);
+  height: var(--button-height);
+  background-color: var(--color-grey);
+  border-radius: calc(var(--button-height) / 2);
+  position: relative;
+  transition: 0.3s all ease-in-out;
+}
+
+.slider::after {
+  content: "";
+  display: inline-block;
+  width: var(--toggle-diameter);
+  height: var(--toggle-diameter);
+  background-color: #fff;
+  border-radius: calc(var(--toggle-diameter) / 2);
+  position: absolute;
+  top: var(--button-toggle-offset);
+  transform: translateX(var(--button-toggle-offset));
+  box-shadow: var(--toggle-shadow-offset) 0 calc(var(--toggle-shadow-offset) * 4) rgba(0, 0, 0, 0.1);
+  transition: 0.3s all ease-in-out;
+}
+
+.switch input[type="checkbox"]:checked + .slider {
+  background-color: var(--color-green);
+}
+
+.switch input[type="checkbox"]:checked + .slider::after {
+  transform: translateX(
+    calc(var(--button-width) - var(--toggle-diameter) - var(--button-toggle-offset))
+  );
+  box-shadow: calc(var(--toggle-shadow-offset) * -1) 0 calc(var(--toggle-shadow-offset) * 4)
+    rgba(0, 0, 0, 0.1);
+}
+
+.switch input[type="checkbox"] {
+  display: none;
+}
+
+.switch input[type="checkbox"]:active + .slider::after {
+  width: var(--toggle-wider);
+}
+
+.switch input[type="checkbox"]:checked:active + .slider::after {
+  transform: translateX(
+    calc(var(--button-width) - var(--toggle-wider) - var(--button-toggle-offset))
+  );
 }
