--- a/src/App.css
+++ b/src/App.css
@@ -103,3 +103,61 @@ h2 {
     calc(var(--button-width) - var(--toggle-wider) - var(--button-toggle-offset))
   );
 }
+
+/* Card animations */
+.card {
+  width: 310px;
+  height: 250px;
+  border-radius: 10px;
+  background: #ffffff;
+  position: relative;
+  padding: 2rem;
+  border: 0.5px solid #c3c6ce;
+  transition: 0.5s ease-out;
+  overflow: visible;
+}
+
+.card-details {
+  color: black;
+  height: 100%;
+  gap: 0.5em;
+  display: grid;
+  place-content: center;
+}
+
+.card-button {
+  transform: translate(-50%, 125%);
+  width: 60%;
+  border-radius: 0.5rem;
+  border: none;
+  background-color: #008bf8;
+  color: #fff;
+  font-size: 1.5rem;
+  padding: 1rem 1rem;
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  opacity: 0;
+  transition: 0.3s ease-out;
+}
+
+.text-body {
+  color: rgb(134, 134, 134);
+}
+
+/*Text*/
+.text-title {
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+/*Hover*/
+.card:hover {
+  border-color: #008bf8;
+  box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.25);
+}
+
+.card:hover .card-button {
+  transform: translate(-50%, 50%);
+  opacity: 1;
+}
