--- a/src/App.css
+++ b/src/App.css
@@ -106,7 +106,7 @@ h2 {
 
 /* Card animations */
 .card {
-  width: 310px;
+  width: 295px;
   height: 250px;
   border-radius: 10px;
   background: #ffffff;
@@ -115,10 +115,11 @@ h2 {
   border: 0.5px solid #c3c6ce;
   transition: 0.5s ease-out;
   overflow: visible;
+  margin: 1rem;
 }
 
 .card-details {
-  color: black;
+  color: #053651;
   height: 100%;
   gap: 0.5em;
   display: grid;
@@ -130,7 +131,7 @@ h2 {
   width: 60%;
   border-radius: 0.5rem;
   border: none;
-  background-color: #008bf8;
+  background-color: #053651;
   color: #fff;
   font-size: 1.5rem;
   padding: 1rem 1rem;
@@ -142,22 +143,63 @@ h2 {
 }
 
 .text-body {
-  color: rgb(134, 134, 134);
+  color: #053651;
 }
 
 /*Text*/
 .text-title {
   font-size: 1.5em;
-  font-weight: bold;
+  font-weight: 600;
 }
 
 /*Hover*/
 .card:hover {
-  border-color: #008bf8;
+  border-color: #053651;
   box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.25);
+  scale: 1.05;
 }
 
 .card:hover .card-button {
   transform: translate(-50%, 50%);
   opacity: 1;
+  cursor: pointer;
+}
+
+/* ContactForm style */
+
+.input-group {
+  position: relative;
+}
+
+.input {
+  border: solid 1.5px #9e9e9e;
+  border-radius: 1rem;
+  background: none;
+  padding: 1rem;
+  font-size: 1.5rem;
+  color: #053651;
+  transition: border 150ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.user-label {
+  position: absolute;
+  left: 15px;
+  color: #e8e8e8;
+  pointer-events: none;
+  transform: translateY(1rem);
+  transition: 150ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input:focus,
+input:valid {
+  outline: none;
+  border: 1.5px solid #1a73e8;
+}
+
+.input:focus ~ label,
+input:valid ~ label {
+  transform: translateY(-50%) scale(0.8);
+  background-color: #d8d8e4;
+  /* padding: 0 0.2em; */
+  color: #2998d5;
 }
