--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,6 @@ body {
   margin: 0 auto;
   /* background: #f7f7ff; */
 }
-
 p,
 a,
 h3,
@@ -132,7 +131,7 @@ h2 {
   width: 60%;
   border-radius: 0.5rem;
   border: none;
-  background-color: #053651;
+  background-color: #193147;
   color: #fff;
   font-size: 1.5rem;
   padding: 1rem 1rem;
@@ -200,9 +199,9 @@ input:valid {
 
 .input:focus ~ label,
 input:valid ~ label {
-  transform: translateY(-50%) scale(0.8);
+  transform: translateY(-70%) scale(0.8);
   /* background-color: #d8d8e4; */
-  background-color: #fff;
+  /* background-color: #8fbdd9; */
   /* padding: 0 0.2em; */
   color: #2998d5;
 }
